--- a/PSXDownloadHelper/PSXDownloadHelper/AppSettings.settings
+++ b/PSXDownloadHelper/PSXDownloadHelper/AppSettings.settings
@@ -92,5 +92,8 @@
     <Setting Name="lixian2" Type="System.String" Scope="User">
       <Value Profile="(Default)">Thunder offline</Value>
     </Setting>
+    <Setting Name="BlockUpdates" Type="System.String" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
